--- a/Cars/Cars/Views/tableCell/TableCell.xib
+++ b/Cars/Cars/Views/tableCell/TableCell.xib
@@ -1,21 +1,159 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TableCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="TableCell" customModule="Cars" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="350" height="130"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="350" height="130"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b9w-HS-MP1">
+                        <rect key="frame" x="10" y="5" width="130" height="120"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="130" id="c41-y3-P31"/>
+                        </constraints>
+                    </imageView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sfR-SG-zFF">
+                        <rect key="frame" x="105" y="10" width="25" height="25"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="25" id="MO7-To-qyw"/>
+                            <constraint firstAttribute="width" constant="25" id="uyS-BY-tOJ"/>
+                        </constraints>
+                        <inset key="imageEdgeInsets" minX="5" minY="2" maxX="2" maxY="2"/>
+                        <state key="normal" image="heart"/>
+                        <connections>
+                            <action selector="btnFavoriteTapped:" destination="gTV-IL-0wX" eventType="touchUpInside" id="wD7-f1-ZIE"/>
+                        </connections>
+                    </button>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lexus 2014" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dVN-tt-Fce">
+                        <rect key="frame" x="150" y="11" width="190" height="19.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16700" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9MO-pV-SM6">
+                        <rect key="frame" x="155" y="37" width="180" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" name="greenColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="GWZ-Ev-rGj">
+                        <rect key="frame" x="155" y="60" width="185" height="55"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="dZP-2A-3lW">
+                                <rect key="frame" x="0.0" y="0.0" width="61.5" height="55"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lefts" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cdz-xf-5S2">
+                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="25"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                        <color key="textColor" name="grayColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="110106" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GUW-kE-Bh4">
+                                        <rect key="frame" x="0.0" y="25" width="61.5" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="G0E-Ba-Xt3">
+                                <rect key="frame" x="61.5" y="0.0" width="62" height="55"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bids" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jR4-bi-qbo">
+                                        <rect key="frame" x="0.0" y="0.0" width="62" height="25"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                        <color key="textColor" name="grayColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fis-CG-PVd">
+                                        <rect key="frame" x="0.0" y="25" width="62" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="1mw-pI-RHe">
+                                <rect key="frame" x="123.5" y="0.0" width="61.5" height="55"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhH-bX-hvc">
+                                        <rect key="frame" x="0.0" y="0.0" width="61.5" height="25"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                        <color key="textColor" name="grayColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="61z-zo-TGp">
+                                        <rect key="frame" x="0.0" y="25" width="61.5" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <color key="textColor" name="redColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="55" id="Ddl-WF-0Vp"/>
+                        </constraints>
+                    </stackView>
+                </subviews>
             </view>
+            <color key="backgroundColor" name="backgroundColor"/>
+            <constraints>
+                <constraint firstItem="9MO-pV-SM6" firstAttribute="top" secondItem="dVN-tt-Fce" secondAttribute="bottom" constant="6.5" id="5Q7-hi-2RI"/>
+                <constraint firstAttribute="trailing" secondItem="GWZ-Ev-rGj" secondAttribute="trailing" constant="10" id="7AV-01-l2r"/>
+                <constraint firstItem="GWZ-Ev-rGj" firstAttribute="leading" secondItem="b9w-HS-MP1" secondAttribute="trailing" constant="15" id="96E-Ze-71J"/>
+                <constraint firstItem="9MO-pV-SM6" firstAttribute="leading" secondItem="b9w-HS-MP1" secondAttribute="trailing" constant="15" id="ASj-07-6nX"/>
+                <constraint firstItem="dVN-tt-Fce" firstAttribute="leading" secondItem="b9w-HS-MP1" secondAttribute="trailing" constant="10" id="B8H-fp-rBG"/>
+                <constraint firstItem="sfR-SG-zFF" firstAttribute="top" secondItem="b9w-HS-MP1" secondAttribute="top" constant="5" id="E73-Zg-Dvz"/>
+                <constraint firstItem="dVN-tt-Fce" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="11" id="Re4-ud-oum"/>
+                <constraint firstItem="sfR-SG-zFF" firstAttribute="trailing" secondItem="b9w-HS-MP1" secondAttribute="trailing" constant="-10" id="RvO-Rb-5Gs"/>
+                <constraint firstAttribute="bottom" secondItem="GWZ-Ev-rGj" secondAttribute="bottom" constant="15" id="WkO-qb-DvW"/>
+                <constraint firstItem="b9w-HS-MP1" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="ceQ-XK-LUa"/>
+                <constraint firstItem="b9w-HS-MP1" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="nY1-2T-7fX"/>
+                <constraint firstAttribute="trailing" secondItem="9MO-pV-SM6" secondAttribute="trailing" constant="15" id="oQM-07-5zG"/>
+                <constraint firstAttribute="trailing" secondItem="dVN-tt-Fce" secondAttribute="trailing" constant="10" id="q4A-MI-D27"/>
+                <constraint firstAttribute="bottom" secondItem="b9w-HS-MP1" secondAttribute="bottom" constant="5" id="zzg-Ji-U6j"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <connections>
+                <outlet property="bidsCount" destination="fis-CG-PVd" id="agU-yq-bFe"/>
+                <outlet property="image" destination="b9w-HS-MP1" id="Vrg-x1-2KW"/>
+                <outlet property="leftItems" destination="GUW-kE-Bh4" id="ppv-MK-T3a"/>
+                <outlet property="name" destination="dVN-tt-Fce" id="tY1-cY-biP"/>
+                <outlet property="price" destination="9MO-pV-SM6" id="DNL-dk-Pwm"/>
+                <outlet property="stackHolder" destination="GWZ-Ev-rGj" id="ucY-Av-P35"/>
+                <outlet property="timeLeft" destination="61z-zo-TGp" id="LQz-Ws-qS4"/>
+            </connections>
+            <point key="canvasLocation" x="52.799999999999997" y="71.064467766116948"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="heart" width="24" height="24"/>
+        <namedColor name="backgroundColor">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="grayColor">
+            <color red="0.61568627450980395" green="0.61568627450980395" blue="0.61568627450980395" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="greenColor">
+            <color red="0.53725490196078429" green="0.70980392156862748" blue="0.28627450980392155" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="redColor">
+            <color red="0.88627450980392153" green="0.18431372549019609" blue="0.23137254901960785" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
